<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/settings"
        android:id="@+id/Settings"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/word_length_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBarWordLength"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="14dp" />

    <SeekBar
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarGuesses"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:max="26"
        android:progress="6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_startgame"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:id="@+id/button"
        android:onClick="playGame" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/guesses"
        android:id="@+id/guesses"
        android:layout_above="@+id/seekBarGuesses"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:id="@+id/seekBarWordLength"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/guesses"
        android:layout_alignEnd="@+id/Settings"
        android:layout_alignRight="@+id/Settings"
        android:layout_marginBottom="66dp"
        android:focusable="false"
        android:max="25"
        android:progress="8" />

    <TextView
        android:id="@+id/word_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBarWordLength"
        android:layout_centerHorizontal="true"
        android:text="@string/word_length"
        android:textSize="20sp" />

</RelativeLayout>
