<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.hangman.app.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:src="@drawable/hangman"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:text="@string/button_playgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="270dp"
        android:onClick="gameSetting" />

    <Button
        android:text="@string/button_highscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="330dp"
        android:onClick="highScores" />

    <Button
        android:text="@string/button_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="390dp"
        android:onClick="onStop" />
</RelativeLayout>
